# CameraServer

./: .gitignore  CMakeLists.txt  README.md  db.json  note.txt
UITest/: index.html
include/: CameraClient.h  CollageCreate.h  ImageEffect.h  RouteModules.h  ServerRoutes.h  SessionInfo.h  UniqueCamPtr.h  UploadClient.h
src/: CameraClient.cpp  CollageCreate.cpp  ImageEffect.cpp  UploadClient.cpp  main.cpp
src/routes/: CollageRoutes.cpp  DebugRoutes.cpp  SessionRoutes.cpp
tests/: CMakeLists.txt  CameraClientTests.cpp  CollageCreateTests.cpp  SessionInfoTests.cpp  UploadTests.cpp  test_main.cpp
